# streamlit-usermanager-demo

./: .bumpversion.toml  .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker_build.sh  docker_run.sh  pyproject.toml  ruff.toml  smoketest.py
.github/workflows/: docker-image.yml  lint-and-test.yml  python-app.yml
app/: CHANGELOG.md  __init__.py  about.py  app.py  common.py  config.py  contact.py  dataframe_utilities.py  db.py  debug_page.py  generateKeys.py  homepage.py  initialize_tables.py  main_menu.py  org_units.py  participant_utilities.py  prestart.sh  roles.py  run.sh  session_user.py  setup_logging.py  sidebar.py  storage_account.py  user_permissions.py  users.py  who_called_me.py
app/.streamlit/: config.toml
app/casbin/: model.conf  policy.csv
app/log-config/: logging-conf.debug.yaml  logging-conf.dev.yaml  logging-conf.prod.yaml  logging-conf.qa.yaml  logging-conf.yaml
app/logs/: .gitignore
app/participants/: __init__.py
app/participants/database/ddl/postgresql/: participant_relations.sql  participants.sql
app/participants/database/ddl/sqlite/: create_db.sql  participant_relations.sql  participants.sql
app/participants/database/ddl/sqlserver/: participant_relations.sql  participants.sql
app/participants/models/: __init__.py  db_schema.py  participant.py  participant_relation.py  participant_relations_v.py
app/participants/repositories/: __init__.py  base_class.py  participant.py  participant_relation.py  participant_relation_repo.py  participant_repo.py
app/participants/tests/: config.py  db.py  test_participant_models.py  test_participant_relation_models.py  test_repositories.py
caddy/: Caddyfile  Dockerfile
caddy/caddy_config/: .gitignore
