[project]
package-mode = false
name = "streamlit-usermanager-demo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Kai Poitschke", email = "kai.poitschke@nielseniq.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit~=1.42",
    "python-dotenv>=1.0.1",
    "streamlit-ldap-authenticator~=0.2.5",
    "streamlit-extras~=0.5.0",
    "pydantic[email]>=2.10",
    "streamlit-option-menu>=0.4.0",
    "validate-email>=1.3",
    "codetiming>=1.4.0",
    "sendgrid>=6.11.0",
    "casbin>=1.36.0",
    "icecream>=2.1.3",
    "sqlalchemy~=2.0.29",
    "pydantic-settings>=2.2.1",
    "streamlit-rsa-auth-ui>=1.1.1",
    "pandas>=2.2.2",
    "pyodbc>=5.2.0",
    "sqlmodel>=0.0.22",
    "humanfriendly>=10.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pytest",
    "bump-my-version",
    "ruff",
    "coverage",
    "sqlalchemy2-stubs",
    "flake8",
    "pandas-stubs",
]

[tool.black]
line-length = 88
#skip-string-normalization = true
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.ruff]
fix = true
indent-width = 4
line-length = 88

[tool.ruff.format]
line-ending = "native"
quote-style = "double"


[tool.mypy]
plugins = [
    "pydantic.mypy",
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
#addopts = "-ra -q -vvvv --color=yes --no-header --no-summary"
addopts = "-ra -q -vvvv --color=yes --no-header"
pythonpath = [".", "app"]
testpaths = [
 "app/participants/tests"
]
