[project]
package-mode = false
name = "streamlit-usermanager-demo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Kai Poitschke", email = "kai.poitschke@nielseniq.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit~=1.46.0",
    "python-dotenv~=1.1.0",
    "streamlit-ldap-authenticator~=0.2.0",
    "pydantic[email]~=2.11",
    "streamlit-option-menu~=0.4.0",
    "validate-email~=1.3.0",
    "codetiming~=1.4.0",
    "casbin~=1.43.0",
    #"icecream>=2.1.3",
    "sqlalchemy~=2.0.29",
    "pydantic-settings~=2.9.0",
    "streamlit-rsa-auth-ui~=1.1.0",
    "pandas~=2.3.0",
    "pyodbc~=5.2.0",
    "sqlmodel~=0.0.24",
    "humanfriendly~=10.0.0",
    "pyyaml~=6.0.2",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "bump-my-version",
    "ruff",
    "coverage",
    "sqlalchemy2-stubs",
    "pandas-stubs",
]

[tool.black]
line-length = 88
#skip-string-normalization = true
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3


[tool.ruff]
fix = true
indent-width = 4
line-length = 88

[tool.ruff.format]
line-ending = "native"
quote-style = "double"


[tool.mypy]
plugins = [
    "pydantic.mypy",
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
#addopts = "-ra -q -vvvv --color=yes --no-header --no-summary"
addopts = "-ra -q -vvvv --color=yes --no-header"
pythonpath = [".", "app"]
testpaths = [
 "app/participants/tests"
]
